Added a new tab named Random and two new cards in the Random tab.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <div data-tab="node" class="tab">NODE.JS</div>
       <div data-tab="jquery" class="tab">jQUERY</div>
       <div data-tab="bootstrap" class="tab">BOOTSTRAP</div>
+      <div data-tab='random' class='tab'>Random</div>
     </div>
   </div>
 
@@ -210,6 +211,24 @@
           <img src="./assets/max.jpg" />
         </div>
         <span>By MAX GOODBOYE</span>
+      </div>
+    </div>
+    <div class="card" data-tab="random">
+      <div class="headline">A card to prove that I know what I am doing!... sort of.</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/abby&sophie.jpg" />
+        </div>
+        <span>By Sister Pups</span>
+      </div>
+    </div>
+    <div class="card" data-tab="random">
+      <div class="headline">Glad the hard part is over. You know what time it is! &#127867 </div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/abby&sophie.jpg" />
+        </div>
+        <span>By Sister Pups</span>
       </div>
     </div>
 
